Fixed main area was too short, header styling and content edits

--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@ body {
 main {
     padding-top:100px; 
     margin: 0 0;
+    margin-bottom:-50px;
 }
 
 .App {
