--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -12,7 +12,7 @@
     display:flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color:#a7cdbd;
     margin:0 0;
     padding:20px;
